# ledmatrix-clock

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
components/: CMakeLists.txt
components/calendar/: calendar.c
components/helix/: component.mk
components/include/: led_matrix.h  net_config.h  nvs_storage.h  rtc_time.h  sht20.h  weather.h
components/led_matrix/: CMakeLists.txt  led_matrix.c  led_matrix.h
components/sht20/: CMakeLists.txt
components/src/: led_matrix.c  net_config.c  nvs_storage.c  rtc_time.c  sht20.c  weather.c
components/text/: CMakeLists.txt
components/weather/: weather.c  weather.h
components/webpage_config/: captive_portal.c
drawing/: BACK.DWG  BACK.SLDDRW  FRONT.DWG  FRONT.SLDDRW  back.SLDPRT  front_.SLDPRT
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/webpage_config/: CMakeLists.txt  captive_portal.c  captive_portal.h
firmware/components/webpage_config/adapt/: esp32_httpd.c  esp32_wifi.c  esp32_wifi.h
firmware/components/webpage_config/cgi/: cgiwifi.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board.c  board.h  helper.c  helper.h  idf_component.yml  led_matrix.c  led_matrix.h  lv_port.c  lv_port.h  mp3_player.c
firmware/main/calendar/: calendar.c  calendar.h  ntp.c  ntp.h
firmware/main/src/: calendar.h  ntp.c  ntp.h  weather.c  weather.h
firmware/main/ui/: digit_16.c  heiti_9.c  montserrat_9.c  ui.c  ui.h  week_zh_10.c
main/: app_main.c  app_sntp.c  app_sntp.h  lunar_calendar.c  lunar_calendar.h  main.c
matrix-clock-pcb/: .gitignore  fp-info-cache  fp-lib-table  ibom.html  matrix-clock-cache.lib  matrix-clock.kicad_pcb  matrix-clock.kicad_pcb-bak  matrix-clock.pro  matrix-clock.sch  mylib.lib  power.sch  speaker.sch  sym-lib-table
reference/: dgwzdzzk_veryhuo.com.rar
(+103 files in other folders)
